hw6 fix: update letter-spacing in App.module.css and SuperEditableSpan.module.css

--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -21,7 +21,7 @@
     font-size: 22px;
     font-weight: 600;
     line-height: 27px;
-    letter-spacing: 0%;
+    letter-spacing: 0;
     text-align: left;
     padding-left: 70px;
 }
