--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -10,7 +10,7 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
-    letter-spacing: 0%;
+    letter-spacing: 0;
     text-align: left;
 }
 
